--- a/style.css
+++ b/style.css
@@ -94,7 +94,6 @@ h6 {
 body {
   background: url('/pexels-pixabay.jpg') no-repeat;
   background-size: cover;
-  background-position: 20px bottom 20px left;
   font-family: 'Technology', sans-serif;
   font-size: 60px;
   font-weight: 700;
@@ -107,13 +106,10 @@ body {
   text-align: center;
 }
 
-body > section > div {
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  justify-content: center;
-  opacity: 1;
-  z-index: 1;
+@media (max-width: 768px) {
+  body {
+    font-size: 35px;
+  }
 }
 
 body > section {
@@ -130,6 +126,19 @@ body > section {
   background-color: transparent;
 }
 
+@media (max-width: 768px) {
+  body > section {
+    width: 350px;
+  }
+}
+
+body > section > div {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+
 .alarmTimeClock {
   font-size: 20px;
   display: flex;
@@ -137,6 +146,7 @@ body > section {
   align-items: center;
   justify-content: center;
   gap: 30px;
+  position: relative;
 }
 
 .alarmTimeClock .controls {
@@ -157,3 +167,18 @@ body > section {
   width: 250px;
   padding-left: 10px;
 }
+
+/* .alarmTimeClock > input:before {
+  content: attr(data-hover);
+  visibility: hidden;
+  background-color: pink;
+  position: absolute;
+  z-index: 1;
+  left: 200px;
+  top: 110%;
+}
+
+.alarmTimeClock > input:hover:before {
+  opacity: 1;
+  visibility: visible;
+} */
